--- a/app/boards/shields/nice_view/nice_view.conf
+++ b/app/boards/shields/nice_view/nice_view.conf
@@ -5,3 +5,5 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
+
+CONFIG_LV_USE_THEME_MONO=n
